--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="main">
             <div class="main d-flex">
                   <div class="countries"></div>
-                  <div class="map b"></div>
+                  <div id="map"></div>
             </div>
 
       </div>
@@ -29,6 +29,8 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js"
             integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk"
             crossorigin="anonymous"></script>
+      <script async
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDzJKHhnX2kRzG_9IhMyXEV0D70PEOfO6I&callback=initMap"></script>
 </body>
 
 </html>
